Update dependecy diagram validation

--- a/Postgre.Presentation.Console.NETFull47/Postgre.Presentation.Console.NETFull47.csproj
+++ b/Postgre.Presentation.Console.NETFull47/Postgre.Presentation.Console.NETFull47.csproj
@@ -76,5 +76,9 @@
       <Name>Postgre.Persistence.NETFull70.EF62</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\Microsoft.DependencyValidation.Analyzers.0.9.0\analyzers\dotnet\cs\Microsoft.DependencyValidation.Analyzers.resources.dll" />
+    <Analyzer Include="..\packages\Microsoft.DependencyValidation.Analyzers.0.9.0\analyzers\dotnet\Microsoft.DependencyValidation.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
