--- a/Postgre.Persistence.NETFull70.EF62/Postgre.Persistence.NETFull70.EF62.csproj
+++ b/Postgre.Persistence.NETFull70.EF62/Postgre.Persistence.NETFull70.EF62.csproj
@@ -72,5 +72,9 @@
       <Name>Postgre.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\Microsoft.DependencyValidation.Analyzers.0.9.0\analyzers\dotnet\cs\Microsoft.DependencyValidation.Analyzers.resources.dll" />
+    <Analyzer Include="..\packages\Microsoft.DependencyValidation.Analyzers.0.9.0\analyzers\dotnet\Microsoft.DependencyValidation.Analyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
