--- a/Postgre.Persistence.NETFull70.EF62/packages.config
+++ b/Postgre.Persistence.NETFull70.EF62/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net47" />
+  <package id="Microsoft.DependencyValidation.Analyzers" version="0.9.0" targetFramework="net471" />
   <package id="Npgsql" version="3.2.6" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net471" />
 </packages>
