--- a/Postgre.Presentation.Console.NETFull47/App.config
+++ b/Postgre.Presentation.Console.NETFull47/App.config
@@ -12,11 +12,7 @@
 
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql Data Provider"
-           invariant="Npgsql"
-           description=".Net Data Provider for PostgreSQL"
-           type="Npgsql.NpgsqlFactory, Npgsql"
-           support="FF" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Data Provider for PostgreSQL" type="Npgsql.NpgsqlFactory, Npgsql" support="FF" />
     </DbProviderFactories>
   </system.data>
 
