Update dependecy diagram validation

--- a/Postgre.Presentation.Console.NETFull47/Postgre.Presentation.Console.NETFull47.csproj
+++ b/Postgre.Presentation.Console.NETFull47/Postgre.Presentation.Console.NETFull47.csproj
@@ -63,6 +63,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AdditionalFiles Include="..\Postgre.DependencyValidation\DependencyValidation.layerdiagram">
+      <Link>DependencyValidation.layerdiagram</Link>
+      <Visible>False</Visible>
+    </AdditionalFiles>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
